# Roboter

./: .gitignore  README.md  unkrautroboter.fzz
unkrautroboter_bilderkennung/: .gitignore  charuco_calibrate_and_save.py  joystick_steuerung.py  livecam.py  main.py  pyproject.toml  send_udp.php  unkrautroboter.html  unkrautroboter.php  unkrautroboter_bilderkennung_yolo.py
unkrautroboter_bilderkennung/joysticksteuerung_pc/: joystick_steuerung.py
unkrautroboter_bilderkennung/monitoring_webserver/: send_udp.php  unkrautroboter.html
unkrautroboter_bilderkennung/monitoring_webserver/css/: style.css
unkrautroboter_bilderkennung/monitoring_webserver/js/: config.js  heartbeat.js  joypad.js  mode.js  reset.js  status.js  stream.js  ws.js
unkrautroboter_bilderkennung/src/: calibration.py  camera.py  config.py  geometry.py  robot_control.py  serial_manager.py  status_bus.py  status_ws_server.py  training.py  udp_server.py  yolo_detector.py
unkrautroboter_bilderkennung/tools/: check_calibration.py
unkrautroboter_energiemanagement/: unkrautroboter_energiemanagement.ino
unkrautroboter_motorsteuerung/: unkrautroboter_motorsteuerung.ino
yolo-training/: charuco-board.py  dataset.yaml  prepare_and_train.py  train.ps1
